--- a/style.css
+++ b/style.css
@@ -1,11 +1,137 @@
+     * {
+         box-sizing: border-box;
+         margin: 0;
+         padding: 0;
+     }
+     
+     body {
+         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+         background: #fff;
+         color: #000;
+         font-size: 14px;
+         line-height: 1.5;
+     }
+     /* .container {
+         width: 90%;
+         max-width: 1200px;
+     } */
+     /* Nav */
+     
+     nav {
+         background-color: rgb(43, 73, 63);
+         margin-bottom: 80px;
+     }
+     
+     .image {
+         width: 100%;
+     }
+     
+     .nav-title {
+         text-align: center;
+         padding-bottom: 20px;
+         padding-top: -20px;
+     }
+     
+     .main-nav .logo {
+         width: 140px;
+         margin-top: 20px;
+     }
+     
+     #root {
+         color: black;
+         display: grid;
+         grid-gap: 30px;
+         grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+         margin: auto 10px;
+         height: 30px;
+     }
+     
+     .container {
+         width: 90%;
+         background: rgb(52, 52, 52);
+         border-radius: 1%;
+         padding: 20px;
+     }
+     
+     .title {
+         color: black;
+         background-color: #dcdcdc;
+         text-align: center;
+         border: solid black 1px;
+         border-width: 10px;
+         border-color: #dcdcdc;
+     }
+     
+     .input-class {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+         margin-top: 40px;
+         margin-bottom: 50px;
+         width: 300px;
+         height: 25px;
+         border-radius: 8px;
+     }
+     /* 
+ body {
+    padding: 16px;
+    background: #c8c8c8;
+}
+
+.input-class {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    width: 300px;
+    height: 25px;
+    border-radius: 8px;
+}
+
+.page-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 #root {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    margin-left: 100px;
+    margin-top: 60px;
+}
+
+.container {
+    height: 260px;
+    width: 260px;
+    background: white;
+    border-radius: 8px;
+}
+
+.title {
     color: black;
+    background-color: #dcdcdc;
+    text-align: center;
+    border: solid black 1px;
+    border-width: 10px;
+    border-color: #dcdcdc;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
+.image {
+    width: 90px;
+    height: 90px;
+    border-radius: 8px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-bottom: 0px;
 }
 
-body {
-    margin: 10px;
-}
+.text {
+    color: black;
+    float: left;
+    margin-left: 8px;
+    margin-right: 3px;
+    margin-top: -5px;
+} */
