--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
      
      body {
          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-         background: #fff;
+         background: #262626;
          color: #000;
          font-size: 14px;
          line-height: 1.5;
@@ -30,6 +30,7 @@
          text-align: center;
          padding-bottom: 20px;
          padding-top: -20px;
+         color: rgb(139, 205, 183);
      }
      
      .main-nav .logo {
@@ -38,7 +39,7 @@
      }
      
      #root {
-         color: black;
+         color: rgb(253, 253, 253);
          display: grid;
          grid-gap: 30px;
          grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -48,17 +49,16 @@
      
      .container {
          width: 90%;
-         background: rgb(52, 52, 52);
+         background: rgb(55, 65, 65);
          border-radius: 1%;
          padding: 20px;
      }
      
      .title {
-         color: black;
-         background-color: #dcdcdc;
+         color: rgb(139, 205, 183);
          text-align: center;
          border: solid black 1px;
-         border-width: 10px;
+         border-width: 5px;
          border-color: #dcdcdc;
      }
      
@@ -68,9 +68,9 @@
          margin-right: auto;
          margin-top: 40px;
          margin-bottom: 50px;
-         width: 300px;
-         height: 25px;
-         border-radius: 8px;
+         width: 400px;
+         height: 30px;
+         border-radius: 1px;
      }
      /* 
  body {
